Simplified buildPageableDtoForDifferentParameters by eliminating language-specific logic and reducing method complexity.